tests/errors/semantic/blocking/SET_UNHASHABLE_TYPE_1.py
# pylint: disable=missing-function-docstring, missing-module-docstring

l = {(1,2,3)}
